src/test/compile-fail/block-must-not-have-result-res.rs
// error-pattern:mismatched types: expected `()` but found `bool`

struct r {
  new() {}
  drop { true }
}

fn main() {
}